Added style sheet and updated html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 	<title>INFO2180 Lab 1</title>
 </head>
 <body>
@@ -12,12 +13,13 @@
 		<p>This is a simple webpage for Lab 1 of INFO2180.</p>
 	</header>
 	<main>
-		<h2>[Kerron Murray]</h2>
-		<p>[A high fantasy geek, cybersecurity professional and chess prodigy (not really)</p>
-		<p>I also love to watch football on the weekends, KTBFFH!, and I think that the meaning of life is found interspersed in the moments we spend doing the things we love, with the people we cherish. <br> 
+		<h2>Kerron Murray</h2>
+		<p>A high fantasy geek, cybersecurity professional and chess prodigy (not really).</p>
+		<p>I also love to watch football, KTBFFH!. I think that the meaning of life is found interspersed in the moments we spend doing the things we love, with the people we cherish. <br> 
 
 		Consequently, one may claim the secret to a happy life is apparent, but life can only be enjoyed in contrast.   
 		</p>
+		<p> I'm interested in web development because it's such a fascinating area of development. We use the internat everyday and while I understand the server/network architecture of how it all comes together, I've never really explored what goes on top of that. This course provides an excellent opportunity to learn it! Pretty cool, I'd say. :) </p>
 	</main>
 	<footer>
 		<p>Copyright &copy; 2023 Kerron Murray.</p>
