Added image and updated html

--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
 	</header>
 	<main>
 		<h2>Kerron Murray</h2>
-		<p>A high fantasy geek, cybersecurity professional and chess prodigy (not really).</p>
-		<p>I also love to watch football, KTBFFH!. I think that the meaning of life is found interspersed in the moments we spend doing the things we love, with the people we cherish. <br> 
+		<p align="justify">
+		A high fantasy geek, cybersecurity professional and chess prodigy (not really).</p>
+		<p align="justify">
+		I also love to watch football, KTBFFH!. I think that the meaning of life is found interspersed in the moments we spend doing the things we love, with the people we cherish. <br> 
 
 		Consequently, one may claim the secret to a happy life is apparent, but life can only be enjoyed in contrast.   
 		</p>
-		<p> I'm interested in web development because it's such a fascinating area of development. We use the internat everyday and while I understand the server/network architecture of how it all comes together, I've never really explored what goes on top of that. This course provides an excellent opportunity to learn it! Pretty cool, I'd say. :) </p>
+		<p align="justify">
+		I'm interested in web development because it's such a fascinating area of development. We use the internat everyday and while I understand the server/network architecture of how it all comes together, I've never really explored what goes on top of that. This course provides an excellent opportunity to learn it! Pretty cool, I'd say. :) </p>
+		<img src="Luffy.jpg" alt="Luffy, G8 arc meme"> 
 	</main>
 	<footer>
 		<p>Copyright &copy; 2023 Kerron Murray.</p>
